hw3/y.output
   0  $accept : program $end

   1  program : code

   2  code : code func_declaration
   3       | code func_definition
   4       | func_declaration
   5       | func_definition

   6  func_declaration : types func_symbol '(' parameters ')' ';'

   7  func_definition : types func_symbol '(' parameters ')' compound_statements

   8  func_symbol : ID

   9  parameters : parameters ',' types ID
  10             | parameters ',' types '*' ID
  11             | types ID
  12             | types '*' ID
  13             |

  14  scalar_declaration : types scalars ';'

  15  scalars : scalars ',' scalar
  16          | scalar

  17  scalar : '*' ID '=' expression
  18         | ID '=' expression
  19         | '*' ID
  20         | ID

  21  array_declaration : types arrays ';'

  22  arrays : arrays ',' array
  23         | array

  24  array : '*' ID array_shape '=' '{' array_content_elements '}'
  25        | ID array_shape '=' '{' array_content_elements '}'
  26        | '*' ID array_shape
  27        | ID array_shape

  28  array_shape : array_shape '[' expression ']'
  29              | '[' expression ']'

  30  array_content_elements : array_content_element ',' array_content_elements
  31                         | array_content_element

  32  array_content_element : '{' array_content_elements '}'
  33                        | expression

  34  expression : expr_4
  35             |

  36  expr_4 : expr_4 '+' expr_3
  37         | expr_4 '-' expr_3
  38         | expr_3

  39  expr_3 : expr_3 '*' expr_2
  40         | expr_3 '/' expr_2
  41         | expr_2

  42  expr_2 : expr_1

  43  expr_1 : '(' expression ')'
  44         | variable '(' func_call_parameters ')'
  45         | variable
  46         | literal
  47         | Null

  48  func_call_parameters : func_call_parameters ',' expression
  49                       | expression

  50  variable : ID

  51  literal : INT
  52          | FLOAT
  53          | CHAR
  54          | STR

  55  statements : statements statement
  56             | statement

  57  statement : expression ';'
  58            | if_statement
  59            | switch_statement
  60            | while_statement
  61            | for_statement
  62            | return_statement
  63            | break_statement
  64            | continue_statement
  65            | compound_statements

  66  if_statement : IF '(' expression ')' compound_statements
  67               | IF '(' expression ')' compound_statements ELSE compound_statements

  68  switch_statement : SWITCH '(' expression ')' '{' switch_cases '}'

  69  switch_cases : switch_cases switch_case
  70               | switch_case

  71  switch_case : CASE expression ':' statements
  72              | DEFAULT ':' statements
  73              | CASE expression ':'
  74              | DEFAULT ':'

  75  while_statement : WHILE '(' expression ')' statement
  76                  | DO statement WHILE '(' expression ')' ';'

  77  for_statement : FOR '(' for_parameters ')' statement

  78  for_parameters : expression ';' expression ';' expression

  79  return_statement : RETURN expression ';'

  80  break_statement : BREAK ';'

  81  continue_statement : CONTINUE ';'

  82  compound_statements : scope_begin compound_statement scope_end
  83                      | '{' '}'

  84  compound_statement : compound_statement scalar_declaration
  85                     | compound_statement array_declaration
  86                     | compound_statement statement
  87                     | scalar_declaration
  88                     | array_declaration
  89                     | statement

  90  types : types TYPE
  91        | TYPE

  92  scope_begin : '{'

  93  scope_end : '}'

state 0
	$accept : . program $end  (0)

	TYPE  shift 1
	.  error

	program  goto 2
	code  goto 3
	func_declaration  goto 4
	func_definition  goto 5
	types  goto 6


state 1
	types : TYPE .  (91)

	.  reduce 91


state 2
	$accept : program . $end  (0)

	$end  accept


state 3
	program : code .  (1)
	code : code . func_declaration  (2)
	code : code . func_definition  (3)

	TYPE  shift 1
	$end  reduce 1

	func_declaration  goto 7
	func_definition  goto 8
	types  goto 6


state 4
	code : func_declaration .  (4)

	.  reduce 4


state 5
	code : func_definition .  (5)

	.  reduce 5


state 6
	func_declaration : types . func_symbol '(' parameters ')' ';'  (6)
	func_definition : types . func_symbol '(' parameters ')' compound_statements  (7)
	types : types . TYPE  (90)

	TYPE  shift 9
	ID  shift 10
	.  error

	func_symbol  goto 11


state 7
	code : code func_declaration .  (2)

	.  reduce 2


state 8
	code : code func_definition .  (3)

	.  reduce 3


state 9
	types : types TYPE .  (90)

	.  reduce 90


state 10
	func_symbol : ID .  (8)

	.  reduce 8


state 11
	func_declaration : types func_symbol . '(' parameters ')' ';'  (6)
	func_definition : types func_symbol . '(' parameters ')' compound_statements  (7)

	'('  shift 12
	.  error


state 12
	func_declaration : types func_symbol '(' . parameters ')' ';'  (6)
	func_definition : types func_symbol '(' . parameters ')' compound_statements  (7)
	parameters : .  (13)

	TYPE  shift 1
	','  reduce 13
	')'  reduce 13

	parameters  goto 13
	types  goto 14


state 13
	func_declaration : types func_symbol '(' parameters . ')' ';'  (6)
	func_definition : types func_symbol '(' parameters . ')' compound_statements  (7)
	parameters : parameters . ',' types ID  (9)
	parameters : parameters . ',' types '*' ID  (10)

	','  shift 15
	')'  shift 16
	.  error


state 14
	parameters : types . ID  (11)
	parameters : types . '*' ID  (12)
	types : types . TYPE  (90)

	TYPE  shift 9
	ID  shift 17
	'*'  shift 18
	.  error


state 15
	parameters : parameters ',' . types ID  (9)
	parameters : parameters ',' . types '*' ID  (10)

	TYPE  shift 1
	.  error

	types  goto 19


state 16
	func_declaration : types func_symbol '(' parameters ')' . ';'  (6)
	func_definition : types func_symbol '(' parameters ')' . compound_statements  (7)

	';'  shift 20
	'{'  shift 21
	.  error

	compound_statements  goto 22
	scope_begin  goto 23


state 17
	parameters : types ID .  (11)

	.  reduce 11


state 18
	parameters : types '*' . ID  (12)

	ID  shift 24
	.  error


state 19
	parameters : parameters ',' types . ID  (9)
	parameters : parameters ',' types . '*' ID  (10)
	types : types . TYPE  (90)

	TYPE  shift 9
	ID  shift 25
	'*'  shift 26
	.  error


state 20
	func_declaration : types func_symbol '(' parameters ')' ';' .  (6)

	.  reduce 6


state 21
	compound_statements : '{' . '}'  (83)
	scope_begin : '{' .  (92)

	'}'  shift 27
	TYPE  reduce 92
	ID  reduce 92
	';'  reduce 92
	'('  reduce 92
	'{'  reduce 92
	Null  reduce 92
	INT  reduce 92
	FLOAT  reduce 92
	CHAR  reduce 92
	STR  reduce 92
	IF  reduce 92
	SWITCH  reduce 92
	WHILE  reduce 92
	DO  reduce 92
	FOR  reduce 92
	RETURN  reduce 92
	BREAK  reduce 92
	CONTINUE  reduce 92


state 22
	func_definition : types func_symbol '(' parameters ')' compound_statements .  (7)

	.  reduce 7


state 23
	compound_statements : scope_begin . compound_statement scope_end  (82)
	expression : .  (35)

	TYPE  shift 1
	ID  shift 28
	'('  shift 29
	'{'  shift 21
	Null  shift 30
	INT  shift 31
	FLOAT  shift 32
	CHAR  shift 33
	STR  shift 34
	IF  shift 35
	SWITCH  shift 36
	WHILE  shift 37
	DO  shift 38
	FOR  shift 39
	RETURN  shift 40
	BREAK  shift 41
	CONTINUE  shift 42
	';'  reduce 35

	types  goto 43
	scalar_declaration  goto 44
	array_declaration  goto 45
	expression  goto 46
	expr_4  goto 47
	expr_3  goto 48
	expr_2  goto 49
	expr_1  goto 50
	variable  goto 51
	literal  goto 52
	compound_statements  goto 53
	compound_statement  goto 54
	scope_begin  goto 23
	statement  goto 55
	if_statement  goto 56
	switch_statement  goto 57
	while_statement  goto 58
	for_statement  goto 59
	return_statement  goto 60
	break_statement  goto 61
	continue_statement  goto 62


state 24
	parameters : types '*' ID .  (12)

	.  reduce 12


state 25
	parameters : parameters ',' types ID .  (9)

	.  reduce 9


state 26
	parameters : parameters ',' types '*' . ID  (10)

	ID  shift 63
	.  error


state 27
	compound_statements : '{' '}' .  (83)

	.  reduce 83


state 28
	variable : ID .  (50)

	.  reduce 50


state 29
	expr_1 : '(' . expression ')'  (43)
	expression : .  (35)

	ID  shift 28
	'('  shift 29
	Null  shift 30
	INT  shift 31
	FLOAT  shift 32
	CHAR  shift 33
	STR  shift 34
	')'  reduce 35

	expression  goto 64
	expr_4  goto 47
	expr_3  goto 48
	expr_2  goto 49
	expr_1  goto 50
	variable  goto 51
	literal  goto 52


state 30
	expr_1 : Null .  (47)

	.  reduce 47


state 31
	literal : INT .  (51)

	.  reduce 51


state 32
	literal : FLOAT .  (52)

	.  reduce 52


state 33
	literal : CHAR .  (53)

	.  reduce 53


state 34
	literal : STR .  (54)

	.  reduce 54


state 35
	if_statement : IF . '(' expression ')' compound_statements  (66)
	if_statement : IF . '(' expression ')' compound_statements ELSE compound_statements  (67)

	'('  shift 65
	.  error


state 36
	switch_statement : SWITCH . '(' expression ')' '{' switch_cases '}'  (68)

	'('  shift 66
	.  error


state 37
	while_statement : WHILE . '(' expression ')' statement  (75)

	'('  shift 67
	.  error


state 38
	while_statement : DO . statement WHILE '(' expression ')' ';'  (76)
	expression : .  (35)

	ID  shift 28
	'('  shift 29
	'{'  shift 21
	Null  shift 30
	INT  shift 31
	FLOAT  shift 32
	CHAR  shift 33
	STR  shift 34
	IF  shift 35
	SWITCH  shift 36
	WHILE  shift 37
	DO  shift 38
	FOR  shift 39
	RETURN  shift 40
	BREAK  shift 41
	CONTINUE  shift 42
	';'  reduce 35

	expression  goto 46
	expr_4  goto 47
	expr_3  goto 48
	expr_2  goto 49
	expr_1  goto 50
	variable  goto 51
	literal  goto 52
	compound_statements  goto 53
	scope_begin  goto 23
	statement  goto 68
	if_statement  goto 56
	switch_statement  goto 57
	while_statement  goto 58
	for_statement  goto 59
	return_statement  goto 60
	break_statement  goto 61
	continue_statement  goto 62


state 39
	for_statement : FOR . '(' for_parameters ')' statement  (77)

	'('  shift 69
	.  error


state 40
	return_statement : RETURN . expression ';'  (79)
	expression : .  (35)

	ID  shift 28
	'('  shift 29
	Null  shift 30
	INT  shift 31
	FLOAT  shift 32
	CHAR  shift 33
	STR  shift 34
	';'  reduce 35

	expression  goto 70
	expr_4  goto 47
	expr_3  goto 48
	expr_2  goto 49
	expr_1  goto 50
	variable  goto 51
	literal  goto 52


state 41
	break_statement : BREAK . ';'  (80)

	';'  shift 71
	.  error


state 42
	continue_statement : CONTINUE . ';'  (81)

	';'  shift 72
	.  error


state 43
	scalar_declaration : types . scalars ';'  (14)
	array_declaration : types . arrays ';'  (21)
	types : types . TYPE  (90)

	TYPE  shift 9
	ID  shift 73
	'*'  shift 74
	.  error

	scalars  goto 75
	scalar  goto 76
	arrays  goto 77
	array  goto 78


state 44
	compound_statement : scalar_declaration .  (87)

	.  reduce 87


state 45
	compound_statement : array_declaration .  (88)

	.  reduce 88


state 46
	statement : expression . ';'  (57)

	';'  shift 79
	.  error


state 47
	expression : expr_4 .  (34)
	expr_4 : expr_4 . '+' expr_3  (36)
	expr_4 : expr_4 . '-' expr_3  (37)

	'+'  shift 80
	'-'  shift 81
	';'  reduce 34
	','  reduce 34
	')'  reduce 34
	']'  reduce 34
	'}'  reduce 34
	':'  reduce 34


state 48
	expr_4 : expr_3 .  (38)
	expr_3 : expr_3 . '*' expr_2  (39)
	expr_3 : expr_3 . '/' expr_2  (40)

	'*'  shift 82
	'/'  shift 83
	';'  reduce 38
	','  reduce 38
	'+'  reduce 38
	'-'  reduce 38
	')'  reduce 38
	']'  reduce 38
	'}'  reduce 38
	':'  reduce 38


state 49
	expr_3 : expr_2 .  (41)

	.  reduce 41


state 50
	expr_2 : expr_1 .  (42)

	.  reduce 42


state 51
	expr_1 : variable . '(' func_call_parameters ')'  (44)
	expr_1 : variable .  (45)

	'('  shift 84
	';'  reduce 45
	','  reduce 45
	'+'  reduce 45
	'-'  reduce 45
	'*'  reduce 45
	'/'  reduce 45
	')'  reduce 45
	']'  reduce 45
	'}'  reduce 45
	':'  reduce 45


state 52
	expr_1 : literal .  (46)

	.  reduce 46


state 53
	statement : compound_statements .  (65)

	.  reduce 65


state 54
	compound_statements : scope_begin compound_statement . scope_end  (82)
	compound_statement : compound_statement . scalar_declaration  (84)
	compound_statement : compound_statement . array_declaration  (85)
	compound_statement : compound_statement . statement  (86)
	expression : .  (35)

	TYPE  shift 1
	ID  shift 28
	'('  shift 29
	'{'  shift 21
	'}'  shift 85
	Null  shift 30
	INT  shift 31
	FLOAT  shift 32
	CHAR  shift 33
	STR  shift 34
	IF  shift 35
	SWITCH  shift 36
	WHILE  shift 37
	DO  shift 38
	FOR  shift 39
	RETURN  shift 40
	BREAK  shift 41
	CONTINUE  shift 42
	';'  reduce 35

	types  goto 43
	scalar_declaration  goto 86
	array_declaration  goto 87
	expression  goto 46
	expr_4  goto 47
	expr_3  goto 48
	expr_2  goto 49
	expr_1  goto 50
	variable  goto 51
	literal  goto 52
	compound_statements  goto 53
	scope_begin  goto 23
	scope_end  goto 88
	statement  goto 89
	if_statement  goto 56
	switch_statement  goto 57
	while_statement  goto 58
	for_statement  goto 59
	return_statement  goto 60
	break_statement  goto 61
	continue_statement  goto 62


state 55
	compound_statement : statement .  (89)

	.  reduce 89


state 56
	statement : if_statement .  (58)

	.  reduce 58


state 57
	statement : switch_statement .  (59)

	.  reduce 59


state 58
	statement : while_statement .  (60)

	.  reduce 60


state 59
	statement : for_statement .  (61)

	.  reduce 61


state 60
	statement : return_statement .  (62)

	.  reduce 62


state 61
	statement : break_statement .  (63)

	.  reduce 63


state 62
	statement : continue_statement .  (64)

	.  reduce 64


state 63
	parameters : parameters ',' types '*' ID .  (10)

	.  reduce 10


state 64
	expr_1 : '(' expression . ')'  (43)

	')'  shift 90
	.  error


state 65
	if_statement : IF '(' . expression ')' compound_statements  (66)
	if_statement : IF '(' . expression ')' compound_statements ELSE compound_statements  (67)
	expression : .  (35)

	ID  shift 28
	'('  shift 29
	Null  shift 30
	INT  shift 31
	FLOAT  shift 32
	CHAR  shift 33
	STR  shift 34
	')'  reduce 35

	expression  goto 91
	expr_4  goto 47
	expr_3  goto 48
	expr_2  goto 49
	expr_1  goto 50
	variable  goto 51
	literal  goto 52


state 66
	switch_statement : SWITCH '(' . expression ')' '{' switch_cases '}'  (68)
	expression : .  (35)

	ID  shift 28
	'('  shift 29
	Null  shift 30
	INT  shift 31
	FLOAT  shift 32
	CHAR  shift 33
	STR  shift 34
	')'  reduce 35

	expression  goto 92
	expr_4  goto 47
	expr_3  goto 48
	expr_2  goto 49
	expr_1  goto 50
	variable  goto 51
	literal  goto 52


state 67
	while_statement : WHILE '(' . expression ')' statement  (75)
	expression : .  (35)

	ID  shift 28
	'('  shift 29
	Null  shift 30
	INT  shift 31
	FLOAT  shift 32
	CHAR  shift 33
	STR  shift 34
	')'  reduce 35

	expression  goto 93
	expr_4  goto 47
	expr_3  goto 48
	expr_2  goto 49
	expr_1  goto 50
	variable  goto 51
	literal  goto 52


state 68
	while_statement : DO statement . WHILE '(' expression ')' ';'  (76)

	WHILE  shift 94
	.  error


state 69
	for_statement : FOR '(' . for_parameters ')' statement  (77)
	expression : .  (35)

	ID  shift 28
	'('  shift 29
	Null  shift 30
	INT  shift 31
	FLOAT  shift 32
	CHAR  shift 33
	STR  shift 34
	';'  reduce 35

	expression  goto 95
	expr_4  goto 47
	expr_3  goto 48
	expr_2  goto 49
	expr_1  goto 50
	variable  goto 51
	literal  goto 52
	for_parameters  goto 96


state 70
	return_statement : RETURN expression . ';'  (79)

	';'  shift 97
	.  error


state 71
	break_statement : BREAK ';' .  (80)

	.  reduce 80


state 72
	continue_statement : CONTINUE ';' .  (81)

	.  reduce 81


state 73
	scalar : ID . '=' expression  (18)
	scalar : ID .  (20)
	array : ID . array_shape '=' '{' array_content_elements '}'  (25)
	array : ID . array_shape  (27)

	'='  shift 98
	'['  shift 99
	';'  reduce 20
	','  reduce 20

	array_shape  goto 100


state 74
	scalar : '*' . ID '=' expression  (17)
	scalar : '*' . ID  (19)
	array : '*' . ID array_shape '=' '{' array_content_elements '}'  (24)
	array : '*' . ID array_shape  (26)

	ID  shift 101
	.  error


state 75
	scalar_declaration : types scalars . ';'  (14)
	scalars : scalars . ',' scalar  (15)

	';'  shift 102
	','  shift 103
	.  error


state 76
	scalars : scalar .  (16)

	.  reduce 16


state 77
	array_declaration : types arrays . ';'  (21)
	arrays : arrays . ',' array  (22)

	';'  shift 104
	','  shift 105
	.  error


state 78
	arrays : array .  (23)

	.  reduce 23


state 79
	statement : expression ';' .  (57)

	.  reduce 57


state 80
	expr_4 : expr_4 '+' . expr_3  (36)

	ID  shift 28
	'('  shift 29
	Null  shift 30
	INT  shift 31
	FLOAT  shift 32
	CHAR  shift 33
	STR  shift 34
	.  error

	expr_3  goto 106
	expr_2  goto 49
	expr_1  goto 50
	variable  goto 51
	literal  goto 52


state 81
	expr_4 : expr_4 '-' . expr_3  (37)

	ID  shift 28
	'('  shift 29
	Null  shift 30
	INT  shift 31
	FLOAT  shift 32
	CHAR  shift 33
	STR  shift 34
	.  error

	expr_3  goto 107
	expr_2  goto 49
	expr_1  goto 50
	variable  goto 51
	literal  goto 52


state 82
	expr_3 : expr_3 '*' . expr_2  (39)

	ID  shift 28
	'('  shift 29
	Null  shift 30
	INT  shift 31
	FLOAT  shift 32
	CHAR  shift 33
	STR  shift 34
	.  error

	expr_2  goto 108
	expr_1  goto 50
	variable  goto 51
	literal  goto 52


state 83
	expr_3 : expr_3 '/' . expr_2  (40)

	ID  shift 28
	'('  shift 29
	Null  shift 30
	INT  shift 31
	FLOAT  shift 32
	CHAR  shift 33
	STR  shift 34
	.  error

	expr_2  goto 109
	expr_1  goto 50
	variable  goto 51
	literal  goto 52


state 84
	expr_1 : variable '(' . func_call_parameters ')'  (44)
	expression : .  (35)

	ID  shift 28
	'('  shift 29
	Null  shift 30
	INT  shift 31
	FLOAT  shift 32
	CHAR  shift 33
	STR  shift 34
	','  reduce 35
	')'  reduce 35

	expression  goto 110
	expr_4  goto 47
	expr_3  goto 48
	expr_2  goto 49
	expr_1  goto 50
	variable  goto 51
	literal  goto 52
	func_call_parameters  goto 111


state 85
	scope_end : '}' .  (93)

	.  reduce 93


state 86
	compound_statement : compound_statement scalar_declaration .  (84)

	.  reduce 84


state 87
	compound_statement : compound_statement array_declaration .  (85)

	.  reduce 85


state 88
	compound_statements : scope_begin compound_statement scope_end .  (82)

	.  reduce 82


state 89
	compound_statement : compound_statement statement .  (86)

	.  reduce 86


state 90
	expr_1 : '(' expression ')' .  (43)

	.  reduce 43


state 91
	if_statement : IF '(' expression . ')' compound_statements  (66)
	if_statement : IF '(' expression . ')' compound_statements ELSE compound_statements  (67)

	')'  shift 112
	.  error


state 92
	switch_statement : SWITCH '(' expression . ')' '{' switch_cases '}'  (68)

	')'  shift 113
	.  error


state 93
	while_statement : WHILE '(' expression . ')' statement  (75)

	')'  shift 114
	.  error


state 94
	while_statement : DO statement WHILE . '(' expression ')' ';'  (76)

	'('  shift 115
	.  error


state 95
	for_parameters : expression . ';' expression ';' expression  (78)

	';'  shift 116
	.  error


state 96
	for_statement : FOR '(' for_parameters . ')' statement  (77)

	')'  shift 117
	.  error


state 97
	return_statement : RETURN expression ';' .  (79)

	.  reduce 79


state 98
	scalar : ID '=' . expression  (18)
	expression : .  (35)

	ID  shift 28
	'('  shift 29
	Null  shift 30
	INT  shift 31
	FLOAT  shift 32
	CHAR  shift 33
	STR  shift 34
	';'  reduce 35
	','  reduce 35

	expression  goto 118
	expr_4  goto 47
	expr_3  goto 48
	expr_2  goto 49
	expr_1  goto 50
	variable  goto 51
	literal  goto 52


state 99
	array_shape : '[' . expression ']'  (29)
	expression : .  (35)

	ID  shift 28
	'('  shift 29
	Null  shift 30
	INT  shift 31
	FLOAT  shift 32
	CHAR  shift 33
	STR  shift 34
	']'  reduce 35

	expression  goto 119
	expr_4  goto 47
	expr_3  goto 48
	expr_2  goto 49
	expr_1  goto 50
	variable  goto 51
	literal  goto 52


state 100
	array : ID array_shape . '=' '{' array_content_elements '}'  (25)
	array : ID array_shape .  (27)
	array_shape : array_shape . '[' expression ']'  (28)

	'='  shift 120
	'['  shift 121
	';'  reduce 27
	','  reduce 27


state 101
	scalar : '*' ID . '=' expression  (17)
	scalar : '*' ID .  (19)
	array : '*' ID . array_shape '=' '{' array_content_elements '}'  (24)
	array : '*' ID . array_shape  (26)

	'='  shift 122
	'['  shift 99
	';'  reduce 19
	','  reduce 19

	array_shape  goto 123


state 102
	scalar_declaration : types scalars ';' .  (14)

	.  reduce 14


state 103
	scalars : scalars ',' . scalar  (15)

	ID  shift 124
	'*'  shift 125
	.  error

	scalar  goto 126


state 104
	array_declaration : types arrays ';' .  (21)

	.  reduce 21


state 105
	arrays : arrays ',' . array  (22)

	ID  shift 127
	'*'  shift 128
	.  error

	array  goto 129


state 106
	expr_4 : expr_4 '+' expr_3 .  (36)
	expr_3 : expr_3 . '*' expr_2  (39)
	expr_3 : expr_3 . '/' expr_2  (40)

	'*'  shift 82
	'/'  shift 83
	';'  reduce 36
	','  reduce 36
	'+'  reduce 36
	'-'  reduce 36
	')'  reduce 36
	']'  reduce 36
	'}'  reduce 36
	':'  reduce 36


state 107
	expr_4 : expr_4 '-' expr_3 .  (37)
	expr_3 : expr_3 . '*' expr_2  (39)
	expr_3 : expr_3 . '/' expr_2  (40)

	'*'  shift 82
	'/'  shift 83
	';'  reduce 37
	','  reduce 37
	'+'  reduce 37
	'-'  reduce 37
	')'  reduce 37
	']'  reduce 37
	'}'  reduce 37
	':'  reduce 37


state 108
	expr_3 : expr_3 '*' expr_2 .  (39)

	.  reduce 39


state 109
	expr_3 : expr_3 '/' expr_2 .  (40)

	.  reduce 40


state 110
	func_call_parameters : expression .  (49)

	.  reduce 49


state 111
	expr_1 : variable '(' func_call_parameters . ')'  (44)
	func_call_parameters : func_call_parameters . ',' expression  (48)

	','  shift 130
	')'  shift 131
	.  error


state 112
	if_statement : IF '(' expression ')' . compound_statements  (66)
	if_statement : IF '(' expression ')' . compound_statements ELSE compound_statements  (67)

	'{'  shift 21
	.  error

	compound_statements  goto 132
	scope_begin  goto 23


state 113
	switch_statement : SWITCH '(' expression ')' . '{' switch_cases '}'  (68)

	'{'  shift 133
	.  error


state 114
	while_statement : WHILE '(' expression ')' . statement  (75)
	expression : .  (35)

	ID  shift 28
	'('  shift 29
	'{'  shift 21
	Null  shift 30
	INT  shift 31
	FLOAT  shift 32
	CHAR  shift 33
	STR  shift 34
	IF  shift 35
	SWITCH  shift 36
	WHILE  shift 37
	DO  shift 38
	FOR  shift 39
	RETURN  shift 40
	BREAK  shift 41
	CONTINUE  shift 42
	';'  reduce 35

	expression  goto 46
	expr_4  goto 47
	expr_3  goto 48
	expr_2  goto 49
	expr_1  goto 50
	variable  goto 51
	literal  goto 52
	compound_statements  goto 53
	scope_begin  goto 23
	statement  goto 134
	if_statement  goto 56
	switch_statement  goto 57
	while_statement  goto 58
	for_statement  goto 59
	return_statement  goto 60
	break_statement  goto 61
	continue_statement  goto 62


state 115
	while_statement : DO statement WHILE '(' . expression ')' ';'  (76)
	expression : .  (35)

	ID  shift 28
	'('  shift 29
	Null  shift 30
	INT  shift 31
	FLOAT  shift 32
	CHAR  shift 33
	STR  shift 34
	')'  reduce 35

	expression  goto 135
	expr_4  goto 47
	expr_3  goto 48
	expr_2  goto 49
	expr_1  goto 50
	variable  goto 51
	literal  goto 52


state 116
	for_parameters : expression ';' . expression ';' expression  (78)
	expression : .  (35)

	ID  shift 28
	'('  shift 29
	Null  shift 30
	INT  shift 31
	FLOAT  shift 32
	CHAR  shift 33
	STR  shift 34
	';'  reduce 35

	expression  goto 136
	expr_4  goto 47
	expr_3  goto 48
	expr_2  goto 49
	expr_1  goto 50
	variable  goto 51
	literal  goto 52


state 117
	for_statement : FOR '(' for_parameters ')' . statement  (77)
	expression : .  (35)
